# Chess-review-project

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile.analysis  Dockerfile.web  LICENSE  README.md  azure.yaml  docker-compose.yml  package-lock.json  package.json
.github/workflows/: azure-swa.yml  ci.yml
apps/analysis/: Dockerfile  config.py  db.py  main.py  pyproject.toml
apps/analysis/models/: schemas.py
apps/analysis/routers/: analysis.py  chessable.py  coaching.py  import_games.py  reports.py  tablebase.py
apps/analysis/services/: chessable_import.py  chesscom_client.py  coaching_service.py  lichess_client.py  report_service.py  stockfish_service.py  tablebase_service.py
apps/analysis/tasks/: analysis_tasks.py  celery_app.py  import_tasks.py  report_tasks.py
apps/web/: next.config.js  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
apps/web/prisma/: schema.prisma
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/explorer/: page.tsx
apps/web/src/app/games/: page.tsx
apps/web/src/app/import/: page.tsx
apps/web/src/app/puzzles/: page.tsx
apps/web/src/app/repertoire/: page.tsx
apps/web/src/app/reports/: page.tsx
apps/web/src/app/search/: page.tsx
apps/web/src/app/settings/: page.tsx
apps/web/src/components/analysis/: AIReview.tsx
apps/web/src/components/board/: ChessBoard.tsx  (+2 more)
apps/web/src/hooks/: useStockfish.ts
apps/web/src/lib/: auth.ts
apps/web/src/stores/: gameStore.ts  importedGamesStore.ts  settingsStore.ts
infra/: deploy.ps1  main.bicep  main.bicepparam
(+23 files in other folders)
